bug 465030 - Support terminating long-running scripts without using extra threads or signals. r=gal,sayrer